Add new projects

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@ For inquiries and feedback, feel free to reach out at:
 	<div class="wrapper">
 
 		<div>
-			<a href="Cindy_Hou_Resume.pdf" download><img src="./images/resume.png" alt="Resume"; style="width:50px;height: 50px;margin-bottom: 15px;">
+			<a href="cindy_hou_resume.pdf" download><img src="./images/resume.png" alt="Resume"; style="width:50px;height: 50px;margin-bottom: 15px;">
 			<br>
 			Resume </a> 
 		</div>
@@ -57,7 +57,7 @@ For inquiries and feedback, feel free to reach out at:
 		<div>
 			<a href="https://github.com/H-Cindy"><img src="./images/linkedin.png" alt="LinkedIn"; style="width:50px;height: 50px;margin-bottom: 15px;">
 				<br>
-			LinkedIN </a>
+			LinkedIn </a>
 		</div>
 </div>
 </center>
