editing food visualization

--- a/enviro_essay.html
+++ b/enviro_essay.html
@@ -32,7 +32,7 @@
 <div class='header title step'>
 	<div class='aligner'>
 			<h1>Environmental Impact of Food</h1>
-			<h2>Using data visualization to analyze the effects of different foods</h2>
+			<h3>Using data visualization to analyze the effects of different foods</h3>
 	</div>
 </div>
 
@@ -42,7 +42,7 @@
 		<!-- <h2>Cindy Hou</h2>	 -->
 		<img src="images/food.jpeg" align="right" style="width:730px;height:521px; padding:0px 0;">
 		<h2>&nbsp;</h2>
-		<h1> What we choose to eat <u> matters </u></h1>
+		<h1> What we choose to eat <i> matters </i></h1>
 		Different foods can have markedly different effects <br>on the environment.
 		<h1>&nbsp;</h1>
 	</div>
