update resume for site

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@ For inquiries and feedback, feel free to reach out at:
 	<div class="wrapper">
 
 		<div>
-			<a href="cindy_hou_resume.pdf" download><img src="./images/resume.png" alt="Resume"; style="width:50px;height: 50px;margin-bottom: 15px;">
+			<a href="/Users/hou/Desktop/GIT Local/h-cindy.github.io/cindy_hou_resume.pdf" download><img src="./images/resume.png" alt="Resume"; style="width:50px;height: 50px;margin-bottom: 15px;">
 			<br>
 			Resume </a> 
 		</div>
