create new data viz tab

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
 	
 		<ul>
 				<li class = "cellHide"> <a href = "index.html"> Home </a></li>
-				<li class = "cellHide"><a href="projects.html">Projects</a></li>
-				<li class = "cellHide"><a href="contact.html">Contact</a></h3></li>
+				<li class = "cellHide"><a href="projects.html">CS Projects</a></li>
+				<li class = "cellHide"><a href="data_viz.html">Data Visualizations</a></li>
+				<li class = "cellHide"><a href="contact.html">Contact</a></li>
 			</li>
 		</ul>
 </nav>
@@ -44,11 +45,15 @@
 	<div class='text'>
 
 		<!-- <h2>Cindy Hou</h2>	 -->
-		<img src="images/self.jpeg" align="right" style="height:614px; padding:0px 50px 30 px 50px;">
+		<img src="images/self.jpeg" align="right" style="height:690px; padding-left: 20px;">
 		<div class='box'>
 		<h2>&nbsp;</h2>
 		<h1> About me</h1>
 		I'm a second-year student at Cornell University pursuing a B.S. in Statistics and Information Science with a minor in Computer Science. <br>
+		<div class="centerCont">
+			<button class="button button1">CS Projects</button>
+			<button class="button button1">Data Visualizations</button>
+		</div>
 		<br>
 		My interests include data science, quantitative analysis, machine learning, coding, and data visualization.
 		<h1>&nbsp;</h1>
