updated data viz tab

--- a/projects.html
+++ b/projects.html
@@ -21,9 +21,10 @@
 	<h3> &nbsp; &nbsp;  </h3>
 	
 		<ul>
-				<li class = "cellHide"> <a href = "index.html"> Home </a></li>
-				<li class = "cellHide"><a href="projects.html">Projects</a></li>
-				<li class = "cellHide"><a href="contact.html">Contact</a></h3></li>
+			<li class = "cellHide"> <a href = "index.html"> Home </a></li>
+			<li class = "cellHide"><a href="projects.html">CS Projects</a></li>
+			<li class = "cellHide"><a href="data_viz.html">Data Visualizations</a></li>
+			<li class = "cellHide"><a href="contact.html">Contact</a></li>
 			</li>
 		</ul>
 </nav>
