adding button links

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 		<h1> About me</h1>
 		I'm a second-year student at Cornell University pursuing a B.S. in Statistics and Information Science with a minor in Computer Science. <br>
 		<div class="centerCont">
-			<button class="button button1">CS Projects</button>
-			<button class="button button1">Data Visualizations</button>
+			<a href = "projects.html"><button class="button button1">CS Projects</button></a>
+			<a href = "data_viz.html"><button class="button button1">Data Visualizations</button></a>
 		</div>
 		<br>
 		My interests include data science, quantitative analysis, machine learning, coding, and data visualization.
@@ -63,6 +63,7 @@
 </div>
 
 
+<script type="text/javascript" src="myscript.js"></script>
 
 	<footer>
 		<br>
