--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,10 @@
 	<h3> &nbsp; &nbsp;  </h3>
 	
 		<ul>
-				<li class = "cellHide"> <a href = "index.html"> Home </a></li>
-				<li class = "cellHide"><a href="projects.html">Projects</a></li>
-				<li class = "cellHide"><a href="contact.html">Contact</a></h3></li>
+			<li class = "cellHide"> <a href = "index.html"> Home </a></li>
+            <li class = "cellHide"><a href="projects.html">CS Projects</a></li>
+            <li class = "cellHide"><a href="data_viz.html">Data Visualizations</a></li>
+            <li class = "cellHide"><a href="contact.html">Contact</a></li>
 			</li>
 		</ul>
 </nav>
@@ -33,7 +34,7 @@
 	<br>
 	
 	<center><h1 style="align-items: center;">Get In Touch</h1></center>
-	<center> <p>
+	<center> <p style="align-items: center;">
 For inquiries and feedback, feel free to reach out at:
 	<br> <a href = "mailto: ch685@cornell.edu"; style = "text-decoration: none; color: #688A6F;"> ch685@cornell.edu </a>	</p>
 	<a href="mailto:ch685@cornell.edu"><img src="./images/email.png" alt="Email"; style="width:;height: 40px;margin-bottom: 15px;"></a> </center>
