new school final updates - titles on pieces

--- a/data_viz.html
+++ b/data_viz.html
@@ -50,6 +50,7 @@
 			</div>
 		  </div>
 		</div>
+        <p style="padding-left:20%;">Google Playstore</p>
 		</a>
 		</div>
 
@@ -66,6 +67,7 @@
 			</div>
 		  </div>
 		</div>
+        <p style="padding-left:15%;">Busiest MTA Stations</p>
 		</a>
 		</div>
 
@@ -76,13 +78,14 @@
 			  <img src="images/projects/tableau.png" alt="Avatar" class="image" style="width: 100%;"> 
 			  <div class="overlay">
 			   <div class="contText">
-			  		<h3> Environmental Impacts of Food </h3>
-			  		An interactive visual essay and website built from scratch using HTML, CSS, and JavaScript to showcase Tableau and Adobe Illustrator visualizations of data on the impacts of different foods.
+			  		<h3> Environmental Impact of Food </h3>    
+			  		An interactive visual essay built using HTML, CSS, and JS to showcase Tableau and Adobe Illustrator visualizations of data on the impacts of different foods.
 			  		
 			</div>
 		  </div>
+          </div>
+          <p style="padding-left:4%;">Environmental Impact of Food</p>
 		  </a>
-		</div>
 		</div>
 
         <br>
