--- a/projects.html
+++ b/projects.html
@@ -37,18 +37,18 @@
 	<div class="wrapper">
 
 		<div>
-			<a href = "https://github.com/emwangs/portfolio_sharpe_opt">
+			<a href = "https://github.com/DarrenKey/CQF-Deep-Dive-Sharpe">
 	    	<div class="container">
-	    	
 			  <img src="images/projects/sharpe.png" alt="Avatar" class="image" style="width: 100%;"> 
 			  <div class="overlay">
 			   <div class="contText">
 			  		<h3> Sharpe Ratio Optimization </h3>
 			  		Maximizing the Sharpe Ratio across the S&P 500 to generate optimate weights for investing.
 			  		<br> <i>Ongoing</i>
-			</div>
-		  </div>
+				</div>
+		  	</div>
 		</div>
+		<p style="padding-left:9%;">Sharpe Ratio Optimization</p>
 		</a>
 		</div>
 
@@ -60,11 +60,12 @@
 			  <div class="overlay">
 			   <div class="contText">
 			  		<h3> iMessage Analysis </h3>
-			  		Using SQL queried iMessage data to visualize messaging patterns. Vectorize message contents to build a Gaussian Naive Bayes classifier predicting the sender of a message.
+			  		Using SQL queried iMessage data to visualize messaging patterns and vectorizing message contents to build a Naive Bayes classifier predicting the sender of a message.
 			  		<br> <i>Ongoing</i>
 			</div>
 		  </div>
 		</div>
+		<p style="padding-left:17%;">iMessage Analysis</p>
 		</a>
 		</div>
 
@@ -81,6 +82,7 @@
 			</div>
 		  </div>
 		</div>
+		<p  style="padding-left:9%;">Engaged Internet of Things</p>
 		</a>
 		</div>
 
@@ -97,6 +99,7 @@
 			</div>
 		  </div>
 		</div>
+		<p style="padding-left:16%;">Reddit User Age</p>
 		</a>
 		</div>
 
@@ -114,6 +117,7 @@
 			</div>
 		  </div>
 		</div>
+		<p style="padding-left:10%;">Data Mining Stock Trends</p>
 		</a>
 		</div>
 
@@ -130,6 +134,7 @@
 			</div>
 		  </div>
 		</div>
+		<p style="padding-left:19%;">Titanic Survivability</p>
 		</a>
 		</div>
 	    	
